[Extensions UI] Don't pop out an overflowed action on item uninstall

If an extension is uninstalled, we shouldn't pop out a previously-
overflowed extension. We still do this for an extension being
disabled because we want a disable->enable cycle to maintain toolbar
width and position.

Change behavior for uninstall and add a test.

BUG=599362

Review URL: https://codereview.chromium.org/1861943002

Cr-Commit-Position: refs/heads/master@{#385811}

Former-commit-id: 12671aca120fb0ffe0b61644b59035da504de9a5